testsuite/tests/typecheck/should_fail/T20289.stderr
T20289.hs:12:8: error: [GHC-18872]
    • Couldn't match type ‘Int’ with ‘Box’
        arising from a use of ‘coerce’
      • Note:
        • The data constructor ‘T20289_A.A’ of newtype ‘A’ is not in scope.
        • The type constructor ‘A’ has nominal role in its first argument.
    • In the expression: coerce aInt
      In an equation for ‘aBox’: aBox = coerce aInt
    Suggested fix:
      Add ‘A’ to the import list in the import of ‘T20289_A’
      (at T20289.hs:3:1-26).

